@@ -58,11 +58,11 @@ public class SwedishEIDProfile extends EIDProfile {
     }
 
     private void init(){
-    	data.put(TYPE, new Integer(TYPE_SWEDISHEID));
+    	data.put(TYPE, Integer.valueOf(TYPE_SWEDISHEID));
 
     	ArrayList certprofileids = new ArrayList(NUMBEROFCERTIFICATES);
-    	certprofileids.add(new Integer(SecConst.CERTPROFILE_FIXED_HARDTOKENSIGN)); 
-    	certprofileids.add(new Integer(SecConst.CERTPROFILE_FIXED_HARDTOKENAUTHENC));
+    	certprofileids.add(Integer.valueOf(SecConst.CERTPROFILE_FIXED_HARDTOKENSIGN)); 
+    	certprofileids.add(Integer.valueOf(SecConst.CERTPROFILE_FIXED_HARDTOKENAUTHENC));
     	data.put(CERTIFICATEPROFILEID, certprofileids);
 
     	ArrayList certWritable = new ArrayList(NUMBEROFCERTIFICATES);
@@ -71,18 +71,18 @@ public class SwedishEIDProfile extends EIDProfile {
     	data.put(CERTWRITABLE, certWritable);
 
     	ArrayList caids = new ArrayList(NUMBEROFCERTIFICATES);
-    	caids.add(new Integer(CAID_USEUSERDEFINED)); 
-    	caids.add(new Integer(CAID_USEUSERDEFINED)); 
+    	caids.add(Integer.valueOf(CAID_USEUSERDEFINED)); 
+    	caids.add(Integer.valueOf(CAID_USEUSERDEFINED)); 
     	data.put(CAID, caids);    
 
     	ArrayList pintypes = new ArrayList(NUMBEROFCERTIFICATES);
-    	pintypes.add(new Integer(PINTYPE_ASCII_NUMERIC));
-    	pintypes.add(new Integer(PINTYPE_ASCII_NUMERIC));
+    	pintypes.add(Integer.valueOf(PINTYPE_ASCII_NUMERIC));
+    	pintypes.add(Integer.valueOf(PINTYPE_ASCII_NUMERIC));
     	data.put(PINTYPE, pintypes);
 
     	ArrayList minpinlength = new ArrayList(NUMBEROFCERTIFICATES);
-    	minpinlength.add(new Integer(4));
-    	minpinlength.add(new Integer(4));
+    	minpinlength.add(Integer.valueOf(4));
+    	minpinlength.add(Integer.valueOf(4));
     	data.put(MINIMUMPINLENGTH, minpinlength);
 
     	ArrayList iskeyrecoverable = new ArrayList(NUMBEROFCERTIFICATES);
@@ -97,8 +97,8 @@ public class SwedishEIDProfile extends EIDProfile {
     	data.put(REUSEOLDCERTIFICATE, reuseoldcertificate);		    
 
     	ArrayList minimumkeylength = new ArrayList(NUMBEROFCERTIFICATES);
-    	minimumkeylength.add(new Integer(1024));
-    	minimumkeylength.add(new Integer(1024));
+    	minimumkeylength.add(Integer.valueOf(1024));
+    	minimumkeylength.add(Integer.valueOf(1024));
     	data.put(MINIMUMKEYLENGTH, minimumkeylength);	  
 
     	ArrayList keytypes = new ArrayList(NUMBEROFCERTIFICATES);
@@ -146,8 +146,8 @@ public class SwedishEIDProfile extends EIDProfile {
 			
 			if(data.get(MINIMUMPINLENGTH) == null){
 				ArrayList minpinlength = new ArrayList(NUMBEROFCERTIFICATES);
-				minpinlength.add(new Integer(4));
-				minpinlength.add(new Integer(4));
+				minpinlength.add(Integer.valueOf(4));
+				minpinlength.add(Integer.valueOf(4));
 				data.put(MINIMUMPINLENGTH, minpinlength);
 			}
 			
