@@ -39,20 +39,20 @@ public class AdminPreference extends UpgradeableDataHashMap implements java.io.S
       super();
       
       // Set default values.
-      data.put(PREFEREDLANGUAGE, new Integer(GlobalConfiguration.EN));
-      data.put(SECONDARYLANGUAGE, new Integer(GlobalConfiguration.EN));
-      data.put(ENTRIESPERPAGE, new Integer(25));
-      data.put(LOGENTRIESPERPAGE, new Integer(25));
+      data.put(PREFEREDLANGUAGE, Integer.valueOf(GlobalConfiguration.EN));
+      data.put(SECONDARYLANGUAGE, Integer.valueOf(GlobalConfiguration.EN));
+      data.put(ENTRIESPERPAGE, Integer.valueOf(25));
+      data.put(LOGENTRIESPERPAGE, Integer.valueOf(25));
       data.put(THEME, "default_theme");   
-      data.put(LASTPROFILE, new Integer(0));
-      data.put(LASTFILTERMODE, new Integer(FILTERMODE_BASIC));
-      data.put(LASTLOGFILTERMODE, new Integer(FILTERMODE_BASIC));
+      data.put(LASTPROFILE, Integer.valueOf(0));
+      data.put(LASTFILTERMODE, Integer.valueOf(FILTERMODE_BASIC));
+      data.put(LASTLOGFILTERMODE, Integer.valueOf(FILTERMODE_BASIC));
       data.put(FRONTPAGECASTATUS, DEFAULT_FRONTPAGECASTATUS);
       data.put(FRONTPAGEPUBQSTATUS, DEFAULT_FRONTPAGEPUBQSTATUS);
     }
 
     public int getPreferedLanguage() {return ((Integer) data.get(PREFEREDLANGUAGE)).intValue();}
-    public void setPreferedLanguage(int language){ data.put(PREFEREDLANGUAGE, new Integer(language));}
+    public void setPreferedLanguage(int language){ data.put(PREFEREDLANGUAGE, Integer.valueOf(language));}
     /** Method taking a string, needs as input the available languages.
      * 
      * @param languages available languages as retrieved from EjbcaWebBean.getAvailableLanguages
@@ -63,14 +63,14 @@ public class AdminPreference extends UpgradeableDataHashMap implements java.io.S
         if(languages != null){
             for(int i=0; i < languages.length; i++){
                 if(languages[i].toUpperCase().equals(languagecode.toUpperCase())) {
-                    data.put(PREFEREDLANGUAGE, new Integer(i));
+                    data.put(PREFEREDLANGUAGE, Integer.valueOf(i));
                 }
             }
         }
     }    
     
     public int getSecondaryLanguage() {return ((Integer) data.get(SECONDARYLANGUAGE)).intValue();}
-    public void setSecondaryLanguage(int language){ data.put(SECONDARYLANGUAGE, new Integer(language));}
+    public void setSecondaryLanguage(int language){ data.put(SECONDARYLANGUAGE, Integer.valueOf(language));}
     /** Method taking a string, needs as input the available languages.
      * 
      * @param languages available languages as retrieved from EjbcaWebBean.getAvailableLanguages
@@ -81,30 +81,30 @@ public class AdminPreference extends UpgradeableDataHashMap implements java.io.S
         if(languages != null){
             for(int i=0; i < languages.length; i++){
                 if(languages[i].toUpperCase().equals(languagecode.toUpperCase())) {
-                    data.put(SECONDARYLANGUAGE, new Integer(i));
+                    data.put(SECONDARYLANGUAGE, Integer.valueOf(i));
                 }
             }
         }
     }    
 
     public int getEntriesPerPage(){return ((Integer) data.get(ENTRIESPERPAGE)).intValue();}
-    public void setEntriesPerPage(int entriesperpage){ data.put(ENTRIESPERPAGE, new Integer(entriesperpage));}
+    public void setEntriesPerPage(int entriesperpage){ data.put(ENTRIESPERPAGE, Integer.valueOf(entriesperpage));}
     
     public int getLogEntriesPerPage(){return ((Integer) data.get(LOGENTRIESPERPAGE)).intValue();}
-    public void setLogEntriesPerPage(int logentriesperpage){ data.put(LOGENTRIESPERPAGE, new Integer(logentriesperpage));}
+    public void setLogEntriesPerPage(int logentriesperpage){ data.put(LOGENTRIESPERPAGE, Integer.valueOf(logentriesperpage));}
     
     public String getTheme() {return  (String) data.get(THEME); }
     public void setTheme(String theme){ data.put(THEME, theme);}    
 
     public int getLastProfile(){return  ((Integer) data.get(LASTPROFILE)).intValue();}
-    public void setLastProfile(int lastprofile){data.put(LASTPROFILE, new Integer(lastprofile));}
+    public void setLastProfile(int lastprofile){data.put(LASTPROFILE, Integer.valueOf(lastprofile));}
     
     /** Last filter mode is the admins last mode in the list end entities jsp page. */
     public int getLastFilterMode(){ return  ((Integer) data.get(LASTFILTERMODE)).intValue();}
-    public void setLastFilterMode(int lastfiltermode){data.put(LASTFILTERMODE, new Integer(lastfiltermode));}
+    public void setLastFilterMode(int lastfiltermode){data.put(LASTFILTERMODE, Integer.valueOf(lastfiltermode));}
     
     public int getLastLogFilterMode() {return  ((Integer) data.get(LASTLOGFILTERMODE)).intValue();}
-    public void setLastLogFilterMode(int lastlogfiltermode) {data.put(LASTLOGFILTERMODE, new Integer(lastlogfiltermode));}    
+    public void setLastLogFilterMode(int lastlogfiltermode) {data.put(LASTLOGFILTERMODE, Integer.valueOf(lastlogfiltermode));}    
     
     public boolean getFrontpageCaStatus(){return Boolean.TRUE.equals(data.get(FRONTPAGECASTATUS));}
     public void setFrontpageCaStatus(boolean frontpagecastatus){ data.put(FRONTPAGECASTATUS, new Boolean(frontpagecastatus));}
